--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "version": "1.0.0",
   "main": "token.js",
   "scripts": {
-    "run": "node token.js"
+    "run": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^0.27.2",
+    "express": "^4.18.2",
     "form-data": "^4.0.0"
   }
 }
