--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "lockfileVersion": 1,
   "name": "app-token",
   "version": "1.0.0",
-  "main": "token.js",
+  "main": "app.js",
   "scripts": {
-    "run": "node server.js"
+    "run": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.2",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "uuid": "^9.0.1"
   }
 }
